# scFM-reconstruction-benchmark

./: .gitignore  README.md  pyproject.toml
models/scgpt/: download_ckpt.py  inference.py  install.py  main.py  pyproject.toml  setup.py
models/simple-baseline/: install.py  main.py  pyproject.toml
src/reconstruction_benchmark/: __init__.py  config.py  masking.py  metrics.py  utils.py
src/reconstruction_benchmark/cli/: __init__.py  prepare_data.py  run_benchmark.py  run_evaluation.py  run_models.py
src/reconstruction_benchmark/data/: __init__.py  pbmc.py  utils.py
src/reconstruction_benchmark/data/datasets/: __init__.py  pbmc3k.py  pbmc68k.py
