[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-baseline-benchmark"
version = "0.1.0"
description = "Simple baseline model runner for reconstruction benchmark"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0",
    "anndata>=0.10.0",
    "pandas>=1.5.0",
]
# Note: reconstruction-benchmark is installed separately via uv pip install

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py", "install.py"]

